# template-python

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
